--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                           <a href="https://web.facebook.com/profile.php?id=100026600944659" class="nav-link">Facebook gua</a>
                                    </li>
                                    <li class="nav-item">
-                                          <a href="help.html" class="nav-link">Reaksi gua</a>
+                                          <a href="maxim.html" class="nav-link">Reaksi gua</a>
                                    </li>
                                    <li class="nav-item">
                                           <a href="https://twitter.com/remonich" class="nav-link">Twitter gua</a>
